2016-10-19  James Monk  <jmonk@cern.ch>
  * Improved the MomentumHelpers again so it can work when there is an
    overloaded setMomentum method

2016-08-08  James Monk  <jmonk@cern.ch>
  * Fixed wrong caching of particles when pixels() is called without updating
    the particles

2016-05-17  James Monk  <jmonk@cern.ch>
  * The MomentumHelpers::has_Pt functions could not be instantiated for ROOT
    TLorentzVector because the Pt() function was overloaded in that case
    and decltype cannot find the type of an overloaded function.  This is
    fixed by finding the return type of the no argument method and checking
    it is a floating point type
  * Fix issue of double delete of GSL wavelet workspace.  Only
    gsl_wavelet_free is called now

2016-05-05  James Monk  <jmonk@cern.ch>
  * Fix memory leak due to improperly freed gsl wavelet workspace

2016-04-05  James Monk  <jmonk@cern.ch>
  * Replace rows of PixelArray to keep track of empty pixels and avoid
    division by zero

2016-03-09  James Monk  <jmonk@cern.ch>
  * Fix mistake in MomentumHelpers has_Pt

2016-03-07  James Monk  <jmonk@cern.ch>
  *  Added WaveletCoefficient::isSmoothing, which returns true if a
     coefficient should be considered part of the "smoothing"
     coefficients that contain no detail information

2015-12-10  James Monk  <jmonk@cern.ch>
  *  Fixed bug which meant ,phi indices on coefficients were accidentally transposed.  No impact up until now since information was not used
  *  Added Pt implementation (as used by TLorentzVector) to MomentumHelpers

2015-12-08  James Monk  <jmonk@cern.ch>
  *  Added methods for phi[Min, Max]() and y[Min, Max]() to
     WaveletCoefficient, giving the physical region to which each
     coefficient is localised and contributes.
  *  Update to GSLEngine to implement the filling of the phi and y ranges

2015-10-28  James Monk  <jmonk@cern.ch>
  *  Fix problem when particle phi is exactly 0 or Pi, leading to out of array bounds